--- a/Makefile.inc
+++ b/Makefile.inc
@@ -99,7 +99,7 @@ ALL_WARNINGS +=	-fearly-inlining
 ifeq ($(DEBUG),0)
 ALL_WARNINGS +=	-fomit-frame-pointer
 endif
-# we have small inline functions in src/lq_route.h which should always be inlined
+# we have small inline functions in src/ipcalc.h which should always be inlined
 ALL_WARNINGS +=	-finline-limit=350
 # These tell gcc to put each function and global variable in a separate section.
 # The linker can than remove all unreferenced section. But in the olsrd binary
