fix compile warnings for gcc-4.3.2
Added a "round up to the power of 2" macro to fix some warnings.
Rewrite some code to avoid warnings.
1 warning is not really fiaxable -at least now.

--- a/lib/nameservice/Makefile
+++ b/lib/nameservice/Makefile
@@ -52,6 +52,9 @@ default_target: $(PLUGIN_FULLNAME)
 $(PLUGIN_FULLNAME): $(OBJS) version-script.txt
 		$(CC) $(LDFLAGS) -o $(PLUGIN_FULLNAME) $(OBJS) $(LIBS)
 
+src/nameservice.o: CPPFLAGS += -Wstrict-overflow=0
+
+
 install:	$(PLUGIN_FULLNAME)
 		$(STRIP) $(PLUGIN_FULLNAME)
 		$(INSTALL_LIB)
