Re-enable -Werror and fix some warnings

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -90,7 +90,7 @@ endif
 #WARNINGS +=	-Wunreachable-code
 WARNINGS +=	-Winline
 WARNINGS +=	-Wdisabled-optimization
-#WARNINGS +=	-Werror
+WARNINGS +=	-Werror
 WARNINGS +=	-finline-functions-called-once
 WARNINGS +=	-fearly-inlining
 ifeq ($(DEBUG),0)
