--- a/Makefile.inc
+++ b/Makefile.inc
@@ -193,7 +193,7 @@ CPPFLAGS +=	-DNDEBUG
 endif
 ifeq ($(NO_DEBUG_MESSAGES),1)
 CPPFLAGS +=	-DNODEBUG
-OPTIMIZE = -Os
+OPTIMIZE ?= -Os
 endif
 
 # a make function to quote "/" and "."
