Let the olsrd find the olsrd.conf in the PREFIXed directory

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -49,6 +49,7 @@ CFGNAME ?= $(EXENAME).conf
 CFGFILE ?= $(ETCDIR)/$(CFGNAME)
 
 CPPFLAGS =	$(filter-out -I./src,-Isrc -I$(TOPDIR)/src)
+CPPFLAGS +=	-DETCDIR='"$(ETCDIR)"'
 
 # add gcc warnings and optimizations if CFLAGS not set
 ifndef CFLAGS
