we use #if in the source so let's always #define SUPPORT_OLD_PLUGIN_VERSIONS

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -157,6 +157,7 @@ LDFLAGS +=	$(EXTRA_LDFLAGS)
 
 # we have plugins with the old interface
 #CPPFLAGS +=	-DSUPPORT_OLD_PLUGIN_VERSIONS=1
+CPPFLAGS +=	-DSUPPORT_OLD_PLUGIN_VERSIONS=0
 
 # use the new fixed point math stuff
 #CPPFLAGS +=     -DUSE_FPM
