Whats wrong with using fixed point math?

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -161,6 +161,11 @@ CPPFLAGS +=	-DSUPPORT_OLD_PLUGIN_VERSIONS=0
 
 # use the new fixed point math stuff
 #CPPFLAGS +=     -DUSE_FPM
+ifneq ($(USE_FPM),0)
+CPPFLAGS +=	-DUSE_FPM=1
+else
+CPPFLAGS +=	-DUSE_FPM=0
+endif
 
 # search sources and headers in current dir and in src/
 SRCS +=		$(wildcard src/common/*.c src/*.c *.c)
