Fix for utf-8 in HTML output The old DSSS stylesheet stuff (docbook2html + openjade + docbook-dsssl) does not output UTF-8 by default. The different script layers makes it difficult to get a DSSS definition to the parser without changeing the default debian packages. This solution uses backslash-r to get the necessary spaces through...

--- a/files/Makefile
+++ b/files/Makefile
@@ -9,7 +9,7 @@ $(MANS): olsrd-manpages.xml
 
 # Requires 'apt-get install docbook-utils'
 index.html: olsrd-manpages.xml
-	docbook2html -V '%use-id-as-filename%' $^
+	docbook2html -V $$(echo "(define\r%html-header-tags%\r'((\"META\"(\"HTTP-EQUIV\"\"Content-Type\")(\"CONTENT\"\"text/html;charset=utf-8\"))))") -V '%use-id-as-filename%'  $^
 
 clean:
 	rm -fv $(MANS)
