Perm fix for misplaced OLSR_FOR_ALL_SOCKETS looks like a sort of typo err included in 32be371fabea

--- a/.hgignore
+++ b/.hgignore
@@ -36,3 +36,7 @@ gui/win32/Shim/Release/
 .#*
 *.flc
 redhat/olsrd.spec
+files/index.html
+files/olsrd_8.html
+files/olsrd_conf_5.html
+files/olsr_switch_8.html
