Removed link to libpthread from daemon. It is sufficient, if the BMF and dyn_gw plugins link in the threads library. This also circumvent a bug in OpenWrt/Kamikaze, where the kernel-libpthread support from uclibc is broken (if you do not load dyn_gw nor BMF, olsrd may run without the '-d' and '--nofork' options).

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -119,9 +119,8 @@ ifneq ($(filter -Wstrict-overflow%,$(WARNINGS)),)
 NO_STRICT_OVERFLOW = -Wstrict-overflow=0
 endif
 
-# Must be specified along with -lpthread on linux
-CPPFLAGS +=	$(OS_CFLAG_PTHREAD)
-endif
+endif # ifndef CFLAGS
+
 ifneq ($(MUDFLAP),0)
 CFLAGS +=	-fmudflapth
 endif
@@ -150,7 +149,6 @@ LDFLAGS +=	-Wl,--warn-common
 ifneq ($(MUDFLAP),0)
 LIBS +=		-lmudflapth
 endif
-LIBS +=		$(OS_LIB_PTHREAD)
 
 # extra options from the outside
 CPPFLAGS +=	$(EXTRA_CPPFLAGS)
