--- a/lib/dyn_gw/Makefile
+++ b/lib/dyn_gw/Makefile
@@ -45,6 +45,9 @@ include $(TOPDIR)/Makefile.inc
 
 LIBS +=		$(OS_LIB_PTHREAD)
 
+# Must be specified along with -lpthread on linux
+CPPFLAGS += $(OS_CFLAG_PTHREAD)
+
 default_target: $(PLUGIN_FULLNAME)
 
 $(PLUGIN_FULLNAME): $(OBJS) version-script.txt
