MacOSX: correct build error (from 27ad4ded6848)

--- a/make/Makefile.osx
+++ b/make/Makefile.osx
@@ -20,6 +20,7 @@ LDFLAGS = -bundle -flat_namespace -undefined suppress
 else
 LDFLAGS = -dynamic
 endif
+LDFLAGS_EXE =
 
 OS_LIB_PTHREAD =
 OS_CFLAG_PTHREAD =
