--- a/.hgignore
+++ b/.hgignore
@@ -10,12 +10,9 @@ syntax: glob
 *.out.*
 TAGS
 olsrd
-olsr_switch
+config-verify
 netsimpcap
 src/builddata.c
-src/cfgparser/oparse.c
-src/cfgparser/oparse.h
-src/cfgparser/oscan.c
 lib/*/*so.*.*
 *.obj
 *.lib
@@ -28,7 +25,6 @@ olsrd.exports
 *.aps
 *.sbr
 *.plg
-gui/win32/win32verify
 gui/win32/Main/Debug/
 gui/win32/Main/Release/
 gui/win32/Shim/Debug/
