Convert duplicate set to new logger. Add logger macros for "no header" lines. example for new macros in duplcate_set.c olsr_print_duplicate_table()

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -52,6 +52,10 @@ CFGFILE ?= $(ETCDIR)/$(CFGNAME)
 CPPFLAGS =	$(filter-out -I./src,-Isrc -I$(TOPDIR)/src)
 CPPFLAGS +=	-DOLSRD_CONF_FILE_NAME='"$(CFGNAME)"'
 CPPFLAGS +=	-DOLSRD_GLOBAL_CONF_FILE='"$(CFGFILE)"'
+#CPPFLAGS +=	-DREMOVE_LOG_DEBUG
+#CPPFLAGS +=	-DREMOVE_LOG_INFO
+#CPPFLAGS +=	-DREMOVE_LOG_WARN
+#CPPFLAGS +=	-DREMOVE_LOG_ERROR
 
 # add gcc warnings and optimizations if CFLAGS not set
 ifndef CFLAGS
