FIX: warning on linux in link_set.c Disable -Werror for stable branch

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -87,7 +87,8 @@ endif
 #WARNINGS +=	-Wunreachable-code
 WARNINGS +=	-Winline
 WARNINGS +=	-Wdisabled-optimization
-WARNINGS +=	-Werror
+# Disable -Werror in stable branch
+#WARNINGS +=	-Werror
 WARNINGS +=	-finline-functions-called-once
 WARNINGS +=	-fearly-inlining
 ifeq ($(DEBUG),0)
