uups! a crosscompile makefile of mine leaked into the repo, sry

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -10,6 +10,9 @@ DEBUG ?= 0
 # compile OLSR_PRINTF out
 NO_DEBUG_MESSAGES ?= 0
 
+# the optimize option to be set for gcc
+OPTIMIZE ?= 
+
 # enable mudflap with 1 or deactivate with 0
 # you need a recent enough gcc and the libmudflap installed
 MUDFLAP ?= 0
@@ -21,13 +24,12 @@ MUDFLAP ?= 0
 #
 
 # programs
-#CCACHE ?=       $(shell IFS=:; for i in $$PATH;do test -x "$$i/ccache" && echo "$$i/ccache" && break; done)
-#ifeq ($(origin CC),default)
-#CC = 		$(CCACHE) gcc
-#else
-#CC ?= 		$(CCACHE) gcc
-#endif
-CC=/home/markus/freifunk/whiterussian/openwrt/staging_dir_mipsel/bin/mipsel-linux-uclibc-gcc
+CCACHE ?=       $(shell IFS=:; for i in $$PATH;do test -x "$$i/ccache" && echo "$$i/ccache" && break; done)
+ifeq ($(origin CC),default)
+CC = 		$(CCACHE) gcc
+else
+CC ?= 		$(CCACHE) gcc
+endif
 ifeq ($(DEBUG),0)
 STRIP ?=	strip
 else
@@ -88,14 +90,14 @@ endif
 #WARNINGS +=	-Wunreachable-code
 WARNINGS +=	-Winline
 WARNINGS +=	-Wdisabled-optimization
-WARNINGS +=	-Werror
+#WARNINGS +=	-Werror
 WARNINGS +=	-finline-functions-called-once
-#WARNINGS +=	-fearly-inlining
+WARNINGS +=	-fearly-inlining
 ifeq ($(DEBUG),0)
 WARNINGS +=	-fomit-frame-pointer
 endif
 # we have small inline functions in src/lq_route.h which should always be inlined
-WARNINGS +=	-finline-limit=700
+WARNINGS +=	-finline-limit=350
 # These tell gcc to put each function and global variable in a separate section.
 # The linker can than remove all unreferenced section. But in the olsrd binary
 # unused doesn't imply unused at all since the function may be used by plugins,
@@ -111,7 +113,7 @@ CFLAGS +=	$(OPTIMIZE)
 CFLAGS +=	$(EXTRA_CFLAGS)
 
 # Must be specified along with -lpthread on linux
-#CPPFLAGS +=	$(OS_CFLAG_PTHREAD)
+CPPFLAGS +=	$(OS_CFLAG_PTHREAD)
 endif
 ifneq ($(MUDFLAP),0)
 CFLAGS +=	-fmudflapth
@@ -137,7 +139,7 @@ LDFLAGS +=	-Wl,--warn-common
 ifneq ($(MUDFLAP),0)
 LIBS +=		-lmudflapth
 endif
-#LIBS +=		$(OS_LIB_PTHREAD)
+LIBS +=		$(OS_LIB_PTHREAD)
 
 # extra options from the outside
 CPPFLAGS +=	$(EXTRA_CPPFLAGS)
@@ -178,14 +180,11 @@ OBJS +=		$(SRCS:%.c=%.o)
 ifeq ($(DEBUG),1)
 CPPFLAGS +=	-DDEBUG
 CFLAGS +=	-ggdb
-OPTIMIZE ?=	-O0
 else
 CPPFLAGS +=	-DNDEBUG
-OPTIMIZE ?=	-O2
 endif
 ifeq ($(NO_DEBUG_MESSAGES),1)
 CPPFLAGS +=	-DNODEBUG
-OPTIMIZE ?=	-Os
 endif
 
 # a make function to quote "/" and "."
