--- a/src/cfgparser/olsrd.conf.example
+++ b/src/cfgparser/olsrd.conf.example
@@ -237,7 +237,7 @@ Interface "eth0" "eth1"
     # Ip4Broadcast      255.255.255.255
 
     # Interface Mode is used to prevent unnecessary
-    # packet forwardin on switched ethernet interfaces
+    # packet forwarding on switched ethernet interfaces
     # valid Modes are mesh and ether
     # The default value is mesh!
 
@@ -252,7 +252,7 @@ Interface "eth0" "eth1"
     # using site-local addresses.
     # If not defined, ff05::15 is used
 
-    Ip6MulticastSite	ff05::11
+    # Ip6MulticastSite	ff05::11
 
     # IPv6 multicast address to use when
     # using global addresses
@@ -272,7 +272,7 @@ Interface "eth0" "eth1"
     # HelloValidityTime	6.0
 
     # TC interval in seconds(float)
-    TcInterval        5.0
+    # TcInterval        5.0
 
     # TC validity time
     # TcValidityTime	15.0
@@ -290,6 +290,7 @@ Interface "eth0" "eth1"
     # HnaValidityTime 	15.0
 }
 
+# another Interface (with different configs)
 Interface "ath1"
 {
     # IPv4 broadcast address to use. 
@@ -299,59 +300,13 @@ Interface "ath1"
     # The second useful value would be to 
     # specify the peer adress of an ptp-tunnel
 
-    # Ip4Broadcast	255.255.255.255
+    Ip4Broadcast	255.255.255.255
 
     # Interface Mode is used to prevent unnecessary
     # packet forwardin on switched ethernet interfaces
     # valid Modes are mesh and ether
     # The default value is mesh!
 
-    # Mode ether
-
-    # IPv6 address scope to use.
-    # Must be 'site-local' or 'global'
-
-    Ip6AddrType		site-local
-
-    # IPv6 multicast address to use when
-    # using site-local addresses.
-    # If not defined, ff05::15 is used
-
-    Ip6MulticastSite	ff05::15
-
-    # IPv6 multicast address to use when
-    # using global addresses
-    # If not defined, ff0e::1 is used
-
-    Ip6MulticastGlobal	ff0e::1
-
-
-    # Emission intervals.
-    # If not defined, RFC proposed values will
-    # be used in most cases.
-
-    # Hello interval in seconds(float)
-    HelloInterval    1.0
-
-    # HELLO validity time
-    HelloValidityTime	3.0
-
-    # TC interval in seconds(float)
-    TcInterval        4.0
-
-    # TC validity time
-    TcValidityTime	14.0
-
-    # MID interval in seconds(float)
-    MidInterval	5.0
-
-    # MID validity time
-    MidValidityTime	15.0
-
-    # HNA interval in seconds(float)
-    HnaInterval	5.0
-
-    # HNA validity time
-    HnaValidityTime 	15.0
+    # Mode "mesh"
 
 }
