Revert last change, mixed up ipv4 and ipv6 length

--- a/make/Makefile.android
+++ b/make/Makefile.android
@@ -14,18 +14,11 @@ HDRS +=		$(wildcard src/linux/*.h src/unix/*.h)
 
 CPPFLAGS += 	-Dlinux
 CPPFLAGS += 	-Dandroid
-CPPFLAGS +=	-DOLSRD_GLOBAL_CONF_FILE=\"$(CFGFILE)\"
-
-# bionic libc: setbuf() segfaults, do not use
-CPPFLAGS +=	-D'setbuf(a,b)='
-
-# bionic libc: missing declaration
-CPPFLAGS +=	-DINET_ADDRSTRLEN=46
-# bionic libc: renamed declaration
+CPPFLAGS +=	-DINET_ADDRSTRLEN=16
 CPPFLAGS +=	-Dipv6mr_interface=ipv6mr_ifindex
-# bionic libc: missing declarations
 CPPFLAGS +=	-D'IPTOS_PREC(tos)=((tos)&0xe0)'
 CPPFLAGS +=	-D'IPTOS_TOS(tos)=((tos)&0x1e)'
+CPPFLAGS +=	-DOLSRD_GLOBAL_CONF_FILE=\"$(CFGFILE)\"
 
 PLUGIN_FULLNAME ?= $(PLUGIN_NAME).so.$(PLUGIN_VER)
 INSTALL_LIB =	install -D -m 755 $(PLUGIN_FULLNAME) $(LIBDIR)/$(PLUGIN_FULLNAME); \
@@ -55,9 +48,9 @@ endif
 CFLAGS += -I$(NDK_ARCH)/usr/include
 
 LDFLAGS += -nostartfiles -nodefaultlibs -nostdlib
-LDFLAGS += -L$(NDK_ARCH)/usr/lib
-LDFLAGS += -Wl,-rpath-link -Wl,$(NDK_ARCH)/usr/lib
 LDFLAGS += -Wl,--dynamic-linker -Wl,/system/bin/linker
+LDFLAGS += -Wl,-L$(NDK_ARCH)/usr/lib
+LDFLAGS += -Wl,-rpath-link -Wl,$(NDK_ARCH)/usr/lib
 ifndef OLSRD_PLUGIN
 LDFLAGS += $(NDK_ARCH)/usr/lib/crtbegin_dynamic.o
 endif
