--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,5 @@ gui/win32/Main/Debug/
 gui/win32/Main/Release/
 gui/win32/Shim/Debug/
 gui/win32/Shim/Release/
+!lib/quagga/patches/quagga-0.98.6.diff
 
