--- a/lib/quagga/Makefile
+++ b/lib/quagga/Makefile
@@ -40,10 +40,9 @@ OLSRD_PLUGIN =	true
 PLUGIN_NAME =	olsrd_quagga
 PLUGIN_VER =	0.2.2
 
-TOPDIR= ../..
+TOPDIR = ../..
 include $(TOPDIR)/Makefile.inc
 
-#CPPFLAGS +=-DMY_DEBUG 
 CFLAGS += -g
 CPPFLAGS +=-DUSE_UNIX_DOMAIN_SOCKET
 
@@ -53,7 +52,7 @@ CPPFLAGS +=-DUSE_UNIX_DOMAIN_SOCKET
 
 ifeq ($(OS),win32)
 default_target install clean:
-	@echo "**** Quagga not supportet on Windows (so it would be pointless to build the Quagga Plugin)"
+	@echo "*** Quagga not supported on Windows (so it would be pointless to build the Quagga plugin)"
 else
 default_target: $(PLUGIN_FULLNAME)
 
