Pushed Eric Tromps (erik_tromp@hotmail.com) new BMF plugin version 1.7.0. PThreads are no longer necessary for BMF. Changed OLSRd version to pre-0.6.0 to keep it in sync with the plugins readme.

--- a/lib/bmf/Makefile
+++ b/lib/bmf/Makefile
@@ -34,12 +34,12 @@
 
 OLSRD_PLUGIN =	true
 PLUGIN_NAME =	olsrd_bmf
-PLUGIN_VER =	1.6.2
+PLUGIN_VER =	1.7.0
 
 TOPDIR = ../..
 include $(TOPDIR)/Makefile.inc
 
-LIBS +=	$(OS_LIB_PTHREAD)
+#LIBS +=	$(OS_LIB_PTHREAD)
 
 ifneq ($(OS),linux)
 
