change warning options

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -103,7 +103,7 @@ ifndef CFLAGS
     ALL_WARNINGS +=	-Wformat-2
     ALL_WARNINGS +=	-Wsequence-point
     ALL_WARNINGS +=	-Wpointer-arith
-    ALL_WARNINGS +=	-Wcast-align
+    #ALL_WARNINGS +=	-Wcast-align
 
     # the following 2 do not work yet and need more work on it
     #ALL_WARNINGS +=	-Wconversion
