--- a/make/Makefile.android
+++ b/make/Makefile.android
@@ -12,7 +12,7 @@ MANDIR =
 SRCS += 	$(wildcard src/linux/*.c src/unix/*.c)
 HDRS +=		$(wildcard src/linux/*.h src/unix/*.h)
 
-CPPFLAGS += 	-Dlinux
+CPPFLAGS += 	-Dlinux -DLINUX_NETLINK_ROUTING
 CPPFLAGS += 	-Dandroid
 CPPFLAGS +=	-DINET_ADDRSTRLEN=16
 CPPFLAGS +=	-Dipv6mr_interface=ipv6mr_ifindex
