Added header files not in Android NDK but required.
Linux kernel header files taken from 2.6.34 version.

--- a/make/Makefile.android
+++ b/make/Makefile.android
@@ -46,6 +46,7 @@ CC = $(CROSS_COMPILE)gcc
 endif
 
 CFLAGS += -I$(NDK_ARCH)/usr/include
+CFLAGS += -Iandroid
 
 LDFLAGS += -nostartfiles -nodefaultlibs -nostdlib
 LDFLAGS += -Wl,--dynamic-linker -Wl,/system/bin/linker
